--- a/public/styles.css
+++ b/public/styles.css
@@ -4,12 +4,14 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: white;
+    color: black;
+    padding: 1rem;
     width: 50vw;
     height: 50vh;
-    border: 1px solid white;
+    border: 1px solid black;
     border-radius: 10px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 5px 5px 10px black;
 }
 
 .modal-container {
@@ -21,5 +23,21 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
+.width-50 {
+    width: 50%;
+}
+
+.full-width{
+    width: 100%;
+}
+
+.tall {
+    height: 100vh;
+}
+
+small {
+    font-size: 0.2rem;
 }
